update: change database configurations

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,8 @@
-# DB Configs
+# Driver configs
+DATABASE_HOST="localhost"
+DATABASE_PORT="5432"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="456852"
+
+# Database configs
+DATABASE_NAME="yawoen"
